# slasshy-indexer

./: .env.example  .gitguardian.yaml  .gitignore  CHANGELOG-v3.0.0.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  what_this_app_about.md
feature-implementation-plans/: google-drive-changes-api.md  rclone-integration.md
oauth-callback/: index.html
public/: player.html  sync.html
src/: App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  gdrive.rs  main.rs  media_manager.rs  mpv_ipc.rs  tmdb.rs  transcoder.rs  watcher.rs
src/components/: CloudFolderBrowser.tsx  DeleteEpisodesModal.tsx  EpisodeBrowser.tsx  EpisodeSelector.tsx  FixMatchModal.tsx  GoogleDriveSettings.tsx  GuidedTour.tsx  MainAppTour.tsx  MovieCard.tsx  OnboardingModal.tsx  PlayerModal.tsx  ResumeDialog.tsx  SettingsModal.tsx  Sidebar.tsx  StreamView.tsx  VideasyPlayer.tsx  VideoPlayer.tsx
src/components/ui/: button.tsx  checkbox.tsx  progress.tsx  slider.tsx  switch.tsx  use-toast.ts
src/services/: api.ts  gdrive.ts
src/utils/: adBlocker.ts
