[package]
name = "slasshy-desktop"
version = "0.1.0"
description = "A Tauri Media Library App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "shell-open", "dialog-open", "fs-all", "http-all", "protocol-asset"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1.10"
walkdir = "2.4"
rayon = "1.10"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
percent-encoding = "2.3"
rand = "0.8"
url = "2.5"
notify-rust = "4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_System_Threading", "Win32_Security"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
