[package]
name = "streamvault"
version = "3.0.2"
description = "A Tauri Media Library App"
authors = ["Suman Patgiri"]
license = ""
repository = "https://github.com/SlasshyOverhere/StreamVault"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "1", features = [ "updater", "system-tray", "shell-open", "dialog-open", "fs-all", "http-all", "protocol-asset"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-deep-link = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
regex = "1.10"
walkdir = "2.4"
rayon = "1.10"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
percent-encoding = "2.3"
rand = "0.8"
url = "2.5"
futures-util = "0.3"
notify-rust = "4"
oauth2 = "4.4"
base64 = "0.21"
open = "5"
dotenvy = "0.15"
tiny_http = "0.12"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_System_Threading", "Win32_Security"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
